<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    style="@style/appLayoutTheme"
    android:layout_width="fill_parent"
    android:layout_height="36dp"
    android:padding="8dp" >

    <ImageView
            android:id="@+id/image_order"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/abc_ab_bottom_solid_dark_holo" />
       

		<TextView
            android:id="@+id/ct_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
       		android:gravity="center_vertical"
            android:text="@string/mealCount"
            android:layout_marginLeft="180dp"
             />
        
        <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/imgDelete"
            android:gravity="center_vertical"
            android:text="@string/mealPrice"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/title_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_order"
            android:layout_toRightOf="@+id/image_order"
            android:gravity="center_vertical"
            android:text="@string/mealName" />

</RelativeLayout>