<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"><!-- #303040 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        >

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:src="@drawable/icon" />
        <!-- android:src=""@drawable/icon -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textColor"
            android:textSize="28sp"
            android:textStyle="italic"
            android:typeface="serif" />
    </LinearLayout>
    <!-- android:lines="2" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uname"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/uname" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ps"
            android:inputType="textPassword" 
           
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="30dp">
 <!-- android:layout_marginLeft="120dp" -->

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_weight="1.16"
                android:background="@color/com_facebook_blue"
                android:text="@string/btn_login"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/btn_register"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_weight="1.21"
                android:layout_marginLeft="1dp"
                android:background="@color/com_facebook_blue"
                android:text="@string/btn_register"
                android:textColor="@color/textColor" />
        </LinearLayout>
   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/forget_ps"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/forget_ps"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/ps" 
            android:textColor="@color/red"
           />

    </LinearLayout>
 </LinearLayout>
 
    
    <!-- TextView
        android:id="@+id/profile_name"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/get_started"
        android:textColor="@color/textColor"
        android:textSize="12sp" /-->

    <com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp" />

</LinearLayout>